--- a/stories/ar/0296_tom-the-banana-seller_slides.html
+++ b/stories/ar/0296_tom-the-banana-seller_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Bakasyon sa bahay ni Lola - Global African Storybook</title>
+  <title>توم، بائع الموز - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="bakasyon-sa-bahay-ni-lola" class="slide level1">
-<h1>Bakasyon sa bahay ni Lola</h1>
+<section id="توم-بائع-الموز" class="slide level1">
+<h1>توم، بائع الموز</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>Nakatira si Odongo at Apiyo sa lungsod kasama ang kanilang tatay. Gustong gusto nila ang bakasyon hindi lang dahil walang pasok, pero dahil dinadalaw nila ang kanilang lola na nakatira sa palaisdaan malapit doon sa malaking lawa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
+<p>يحمل توم طبق الموز الناضج.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>Masaya sina Odongo at Apiyo na malapit na nila makasama si lola. Sa gabi pa lang, naka-impake na ang mga damit at nakahanda na ang lahat para sa biyahe. Hindi sila makatulog sa tuwa kaya buong gabi silang nagkuwentuhan.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
+<p>يتجه توم إلى السوق لبيع الموز.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>Kinaumagahan, hinatid sila ng kanilang tatay papunta sa lola. Dumaan sila sa mga taniman ng tsaa at mga bundok na may ligaw na hayup. Binilang nila ang mga sasakyang dumaan at nagkantahan din sila.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
+<p>الناس في السوق يشترون الفاكهة.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
-<p>Di nagtagal, napagod ang dalawa at nakatulog ng mahimbing.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
+<p>لكن لا أحد يشتري موزات توم. إنهم يحبذون شراء الفاكهة من النساء.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>Ginising sila ng tatay nung makarating sila sa nayon. Nakita nila si Lola Nyar-Kanyada na nagpapahinga sa ilalim ng puno. Sa Luo, ang ibig sabihin ng Nyar-Kanyada ay &quot;anak ng mga tiga-Kanyada.&quot; Maganda at matatag na babae ang lola ni Odongo at Apiyo.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
+<p>يقول الناس &quot;في مجتمعنا لا يبيع الفاكهة إلا النساء&quot; ويتساءلون &quot;ما نوع هذا الرجل؟&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>Sumayaw at kumanta sa tuwa si Nyar-Kanyada nang dumating ang mga apo. Nag-uunahan sa pagbigay ng pasalubong sina Odongo at Apiyo. &quot;Buksan po ninyo, bilis,&quot; sabi ni Odongo. &quot;Akin muna unahin ninyo,&quot; sabi ni Apiyo.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
+<p>لكن توم لا يستسلم. ها هو ينادي &quot;اشتروا موزي ... اشتروا موزي الناضج اللذيذ.&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
-<p>Pagkatapos mabuksan ang mga pasalubong, pinagmano ni Nyar-Kanyada ang mga apo.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
+<p>أخذت امرأة حزمة الموز من على الطبق وتفحصتها بعناية.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
-<p>Naglaro agad sa labas sina Odongo at Apiyo. Nakipaghabulan sila sa mga paru-paru at mga ibon.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
+<p>اشترت المرأة الموز.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
-<p>Inakyat nila ang mga puno at nagtampisaw sa lawa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
+<p>توافد الناس على المنضدة. يشترون موزات توم ويأكلونها.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
-<p>Bumalik lang sila sa bahay ng lola nung malapit na maghapunan. Hindi pa man natatapos kumain, nakatulog na sila!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
+<p>أفرغ الطبق بسرعة. أخذ توم يحصي المال الذي ربحه.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
-<p>Kinaumagahan, bumalik sa lungsod ang tatay at naiwan sina Odongo at Apiyo kay Nyar-Kanyada.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
+<p>ثم اشترى توم صابونا وسكرا وخبزا ووضع المشتريات في الطبق.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,8 +195,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
-<p>Tumulong sila sa mga gawaing-bahay ng lola. Nag-igib sila ng tubig at nag-hanap ng panggatong. Inipon nila ang mga itlog sa manukan at nanguha ng gulay sa gulayan.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
+<p>وضع توم الطبق على رأسه ورجع إلى منزله.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -204,84 +204,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
-<p>Tinuruan din sila ni Nyar-Kanyada kung paano magluto ng stew. Pinakita pa ng lola kung paano gumawa ng ginataang kanin at inihaw na isda.</p>
-<center>
-<strong>13</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>Isang araw, dinala ni Odongo ang mga baka sa bukid ng kapitbahay. Kinain ng mga baka ang damo at nagalit ang may-ari. Nagbanta siyang kukunin ang mga baka bilang kabayaran pero nangako si Odongo na hindi na uulit.</p>
-<center>
-<strong>14</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>Isang beses, sumama ang magkapatid sa palengke. May tindahan pala ng gulay, asukal at sabon si lola. Si Apiyo ang tigasabi ng presyo at si Odongo naman ang tigabalot ng mga binili.</p>
-<center>
-<strong>15</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
-<p>Nang maubos lahat, uminum silang tatlo ng tsaa at binilang ang perang kinita.</p>
-<center>
-<strong>16</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
-<p>Di nagtagal, natapos ang bakasyon. Nag-impake ng gamit ang magkapatid. Binigyan ni Nyar-Kanyada si Odongo ng sombrero at pangginaw naman ang para kay Apiyo. Naghanda rin siya ng makakain nila sa biyahe.</p>
-<center>
-<strong>17</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
-<p>Dumating ang tatay para sunduin sila pero ayaw sumama ng magkapatid. Nagmakaawa sila kay Nyar-Kanyada na tumira na lang sa lungsod. &quot;Matanda na ako. Hindi ko na kaya ang buhay sa lungsod. Hihintayin ko na lang kayo sa sunod na bakasyon.&quot;</p>
-<center>
-<strong>18</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
-<p>Mahigpit na niyakap ni Odongo at Apiyo ang lola.</p>
-<center>
-<strong>19</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>Kinuwento nina Odongo at Apiyo sa kanilang mga kaibigan ang lahat. Sabi ng iba mas gusto pa rin nila ang buhay sa lungsod. Sabi naman ng iba, mas maganda talaga sa nayon. Pero lahat sila sang-ayon na walang hihigit pa kay Lola Nyar-Kanyada!</p>
-<center>
-<strong>20</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="bakasyon-sa-bahay-ni-lola-1">Bakasyon sa bahay ni Lola</h2>
-<strong>Text:</strong> Violet Otieno<br> <strong>Illustrations:</strong> Catherine Groenewald<br> <strong>Translation:</strong> Arlene Avila<br> <strong>Language:</strong> Tagalog<br>
+<h2 id="توم-بائع-الموز-1">توم، بائع الموز</h2>
+<strong>Text:</strong> Humphreys Odunga<br> <strong>Illustrations:</strong> Zablon Alex Nguku<br> <strong>Translation:</strong> Maaouia Haj Mabrouk<br> <strong>Language:</strong> Arabic<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/holidays-grandmother'>here</a>
+You can view the original story on the ASP website <a href='http://my.africanstorybook.org/stories/tom-banana-seller'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
