--- a/stories/index.html
+++ b/stories/index.html
@@ -259,6 +259,12 @@
       <td><a name="ar0271"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0296</td>
+      <td><a href="/stories/ar/0296_tom-the-banana-seller_slides.html" target="_blank">توم، بائع الموز</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ar0296"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0302</td>
       <td><a href="/stories/ar/0302_النار_slides.html" target="_blank">النار</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsUTkwTGRHUVRXb3M"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -3617,7 +3623,7 @@
       <td>0296</td>
       <td><a href="http://my.africanstorybook.org/stories/tom-banana-seller">Tom the banana seller</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
+      <td><a href="#ar0296">ar</a>, <a href="#ko0296">ko</a>, <a href="#pa0296">pa</a>, <a href="#tl0296">tl</a>, <a href="#zh0296">zh</a></td>
     </tr>
     <tr>
       <td>0302</td>
