--- a/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok.html
+++ b/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok.html
@@ -126,7 +126,7 @@ Tessa Welch<br>Tagalog</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
 
-<p>Pagkaalis ng aso, bumunot si Nozibele ng tatlong hibla ng buhok sa kanyang ulo. Nilagay niya ang sa sa ilalim ng kama, isa sa likod ng pinto at isa sa kraal. Saka siya kumaripas ng takbo pauwi.</p>
+<p>Pagkaalis ng aso, bumunot si Nozibele ng tatlong hibla ng buhok sa kanyang ulo. Nilagay niya ang sa sa ilalim ng kama, isa sa likod ng pinto at isa sa kural. Saka siya kumaripas ng takbo pauwi.</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
@@ -136,7 +136,7 @@ Tessa Welch<br>Tagalog</div><div class="pagebreak">
 <p>Pagbalik ng aso, hinanap niya si Nozibele. “Asan ka, Nozibele?”
 “Andito ako sa ilalim ng kama,” sabi ng unag hibla.
 “Andito ako sa likod ng pinto,” sabi ng ikalawa.
-“Andito ako sa kraal,” sabi ng ikatlo.</p>
+“Andito ako sa kural,” sabi ng ikatlo.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
