--- a/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok_slides.html
+++ b/stories/tl/0066_si-nozibele-at-ang-tatlong-hibla-ng-buhok_slides.html
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p>Pagkaalis ng aso, bumunot si Nozibele ng tatlong hibla ng buhok sa kanyang ulo. Nilagay niya ang sa sa ilalim ng kama, isa sa likod ng pinto at isa sa kraal. Saka siya kumaripas ng takbo pauwi.</p>
+<p>Pagkaalis ng aso, bumunot si Nozibele ng tatlong hibla ng buhok sa kanyang ulo. Nilagay niya ang sa sa ilalim ng kama, isa sa likod ng pinto at isa sa kural. Saka siya kumaripas ng takbo pauwi.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>Pagbalik ng aso, hinanap niya si Nozibele. &quot;Asan ka, Nozibele?&quot; &quot;Andito ako sa ilalim ng kama,&quot; sabi ng unag hibla. &quot;Andito ako sa likod ng pinto,&quot; sabi ng ikalawa. &quot;Andito ako sa kraal,&quot; sabi ng ikatlo.</p>
+<p>Pagbalik ng aso, hinanap niya si Nozibele. &quot;Asan ka, Nozibele?&quot; &quot;Andito ako sa ilalim ng kama,&quot; sabi ng unag hibla. &quot;Andito ako sa likod ng pinto,&quot; sabi ng ikalawa. &quot;Andito ako sa kural,&quot; sabi ng ikatlo.</p>
 <center>
 <strong>12</strong>
 </center>
