--- a/stories/tl/0243_bakasyon-sa-bahay-ni-lola.html
+++ b/stories/tl/0243_bakasyon-sa-bahay-ni-lola.html
@@ -126,7 +126,7 @@ Violet Otieno<br>Tagalog</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
 
-<p>Tumulong sila sa mga gawaing-bahay ng lola. Nag-igib sila ng tubig at nag-hanap ng panggatong. Inipon nila ang mga itlog sa manukan at nanguha ng gulay sa hardin.</p>
+<p>Tumulong sila sa mga gawaing-bahay ng lola. Nag-igib sila ng tubig at nag-hanap ng panggatong. Inipon nila ang mga itlog sa manukan at nanguha ng gulay sa gulayan.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
