--- a/stories/tl/0262_magozwe.html
+++ b/stories/tl/0262_magozwe.html
@@ -77,7 +77,7 @@ Lesley Koyi<br>Tagalog</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
 
-<p>Isang araw, nakakita si Magozwe ng gula-gulanit na libro sa basura. Nilinis niya ang libro at nilagay iyon sa kanyang sako. Araw-araw, tinitingnan lang niya ang mga larawan sa libro kasi hindi siya marunong magbasa.</p>
+<p>Isang araw, nakakita si Magozwe ng gula-gulanit na libro sa basura. Nilinis niya ang libro at nilagay iyon sa kanyang sako. Araw-araw, tinitingnan lang niya ang mga larawan sa libro sapagka’t hindi siya marunong magbasa.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,7 +91,7 @@ Lesley Koyi<br>Tagalog</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
 
-<p>Isang malamig na araw, nakatayo si Magozwe sa kalye namamalimos nang lumapit sa kanya ang isang mama. “Magandang umaga. Ako si Tomas. Malapit lang dito ang pinagtatrabahuhan ko at namimigay kami ng libreng pagkain.” Tinuro niya ang dilaw na bahay na may asul na bubong. “Sana makadaan ka doon.” Tiningnan lang ni Magozwe ang mama at ang bahay. “Tingnan ko,” sabi niya sabay talikod.</p>
+<p>Isang malamig na araw, nakatayo si Magozwe sa kalye namamalimos nang lumapit sa kanya ang isang mama. “Magandang umaga. Ako si Tomas. Malapit lang dito ang pinagtatrabahuhan ko at namimigay kami ng libreng pagkain.” Tinuro niya ang dilaw na bahay na may asul na bubong. “Sana makadaan ka doon.” Tiningnan lang ni Magozwe ang mama at ang bahay. “Titingnan ko,” sabi niya sabay talikod.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
