--- a/stories/tl/0262_magozwe_slides.html
+++ b/stories/tl/0262_magozwe_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/06.jpg" /></p>
-<p>Isang araw, nakakita si Magozwe ng gula-gulanit na libro sa basura. Nilinis niya ang libro at nilagay iyon sa kanyang sako. Araw-araw, tinitingnan lang niya ang mga larawan sa libro kasi hindi siya marunong magbasa.</p>
+<p>Isang araw, nakakita si Magozwe ng gula-gulanit na libro sa basura. Nilinis niya ang libro at nilagay iyon sa kanyang sako. Araw-araw, tinitingnan lang niya ang mga larawan sa libro sapagka’t hindi siya marunong magbasa.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/08.jpg" /></p>
-<p>Isang malamig na araw, nakatayo si Magozwe sa kalye namamalimos nang lumapit sa kanya ang isang mama. &quot;Magandang umaga. Ako si Tomas. Malapit lang dito ang pinagtatrabahuhan ko at namimigay kami ng libreng pagkain.&quot; Tinuro niya ang dilaw na bahay na may asul na bubong. &quot;Sana makadaan ka doon.&quot; Tiningnan lang ni Magozwe ang mama at ang bahay. &quot;Tingnan ko,&quot; sabi niya sabay talikod.</p>
+<p>Isang malamig na araw, nakatayo si Magozwe sa kalye namamalimos nang lumapit sa kanya ang isang mama. &quot;Magandang umaga. Ako si Tomas. Malapit lang dito ang pinagtatrabahuhan ko at namimigay kami ng libreng pagkain.&quot; Tinuro niya ang dilaw na bahay na may asul na bubong. &quot;Sana makadaan ka doon.&quot; Tiningnan lang ni Magozwe ang mama at ang bahay. &quot;Titingnan ko,&quot; sabi niya sabay talikod.</p>
 <center>
 <strong>7</strong>
 </center>
