--- a/stories/tl/0315_awit-ni-sakima_slides.html
+++ b/stories/tl/0315_awit-ni-sakima_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/03.jpg" /></p>
-<p>Nagkasakit si Sakima nong siya ay tatlong taon at mula noon ay naging bulag siya.</p>
+<p>Nagkasakit si Sakima noong siya ay tatlong taong gulang at mula noon ay naging bulag siya.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
-<p>Natapos ni Sakima ang isang kanta at balak na sana niya umalis. Hinabol siya ng mayaman, &quot;Pasuyo naman, kanta ka pa uli.&quot;</p>
+<p>Natapos ni Sakima ang isang awit at balak na sana niyang umalis. Hinabol siya ng mayaman, “Pasuyo naman, umawit ka pa uli.”</p>
 <center>
 <strong>16</strong>
 </center>
