--- a/stories/tl/0324_paluwas-sa-malaking-lungsod_slides.html
+++ b/stories/tl/0324_paluwas-sa-malaking-lungsod_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
-<p>Halos puno na ang bus pero marami pa rin gustong sumakay. Nilagay ng iba ang bagahe sa ilalim ng bus. Ipinatong naman nung iba ang mga gamit nila sa mga racks sa loob.</p>
+<p>Halos puno na ang bus pero marami pa rin gustong sumakay. Nilagay ng iba ang bagahe sa ilalim ng bus. Ipinatong naman nung iba ang mga gamit nila sa mga lalagyan sa loob.</p>
 <center>
 <strong>3</strong>
 </center>
