--- a/stories/tl/0324_paluwas-sa-malaking-lungsod.html
+++ b/stories/tl/0324_paluwas-sa-malaking-lungsod.html
@@ -63,7 +63,7 @@ Lesley Koyi, Ursula Nafula<br>Tagalog</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
 
-<p>Halos puno na ang bus pero marami pa rin gustong sumakay. Nilagay ng iba ang bagahe sa ilalim ng bus. Ipinatong naman nung iba ang mga gamit nila sa mga racks sa loob.</p>
+<p>Halos puno na ang bus pero marami pa rin gustong sumakay. Nilagay ng iba ang bagahe sa ilalim ng bus. Ipinatong naman nung iba ang mga gamit nila sa mga lalagyan sa loob.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
